--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -176,3 +176,11 @@ td img {
 .form-label, .container{
     color: white;
 }
+
+.detail-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+
+
